--- a/RealEstates/Pages/LoginPage.xaml
+++ b/RealEstates/Pages/LoginPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RealEstates.Pages.RegisterPage"
-             Title="RegisterPage">
+             x:Class="RealEstates.Pages.LoginPage"
+             Title="LoginPage">
     <VerticalStackLayout VerticalOptions="Center" 
                          Margin="20,0,20,0"
                          Spacing="20">
@@ -10,43 +10,38 @@
                HorizontalOptions="Center"
                HeightRequest="80"
                WidthRequest="80" />
-        <Label Text="Create a new account"
+        <Label Text="Welcome Back!"
                TextColor="Wheat"
                FontSize="Large"
                HorizontalOptions="Center" />
-        <Label Text="Please fill in the form below to create a new account."
+        <Label Text="Please fill in the form below to Login."
                TextColor="Gray"
                FontSize="Small"
                HorizontalOptions="Center" />
-        <Entry x:Name="EntFullName"
-               Placeholder="Full Name"/>
         <Entry x:Name="EntEmail"
                Placeholder="Email"/>
-        <Entry x:Name="EntPhone"
-               Placeholder="Phone"/>
         <Entry x:Name="EntPassword"
                Placeholder="Password"
                IsPassword="True"/>
-        <Button x:Name="BtnRegister"
-                Text="Register Now"
+        <Button x:Name="BtnLogin"
+                Text="Sign In"
                 HeightRequest="50"
                 FontSize="Medium"
                 BackgroundColor="LightBlue"
-                Clicked="BtnRegister_Clicked"/>
+                Clicked="BtnLogin_Clicked"/>
 
         <HorizontalStackLayout HorizontalOptions="Center">
-            <Label Text="Already have a account?"
+            <Label Text="Not a member?"
                    FontSize="Medium"
                    TextColor="Wheat"/>
-            <Label Text="Sign In"
+            <Label Text="Join Now"
                    FontSize="Medium"
                    TextColor="LightGray"/>
             <HorizontalStackLayout.GestureRecognizers>
-                <TapGestureRecognizer x:Name="TapLogin"
-                                      Tapped="TapLogin_Tapped"/>
+                <TapGestureRecognizer x:Name="TapJoinNow" Tapped="TapJoinNow_Tapped"/>
             </HorizontalStackLayout.GestureRecognizers>
         </HorizontalStackLayout>
-        
+
 
     </VerticalStackLayout>
 </ContentPage>
