Add new property pages and update image URL handling
- Updated `FullImageUrl` property in multiple files to include a forward slash between `AppSettings.ApiUrl` and `ImageUrl`.
- Wrapped `Home` tab in `CustomTabbedPage.xaml` with a `NavigationPage` and set `BarBackground` and `BarTextColor`.
- Modified `Home.xaml` to hide navigation bar and added `SelectionMode` and `SelectionChanged` event handlers to `CollectionView` elements.
- Corrected `FullImageUrl` binding to `FullImageUrls` in `Home.xaml`.
- Refactored methods and added event handlers in `Home.xaml.cs`.
- Updated `RealEstates.csproj` to include new XAML pages for compilation.
- Added `PropertiesListPage.xaml` and `PropertiesListPage.xaml.cs` to display a list of properties by category.
- Added `PropertyDetailedPage.xaml` and `PropertyDetailedPage.xaml.cs` to display detailed information about a selected property.

--- a/RealEstates/Pages/CustomTabbedPage.xaml
+++ b/RealEstates/Pages/CustomTabbedPage.xaml
@@ -8,7 +8,11 @@
              SelectedTabColor="AntiqueWhite"
              UnselectedTabColor="Aqua"
              Title="CustomTabbedPage">
-    <local:Home Title="Home" IconImageSource="home_icon.png"/>
+    <NavigationPage Title="Home" IconImageSource="home_icon.png" BarBackground="#1d94ab" BarTextColor="White">
+        <x:Arguments>
+            <local:Home />
+        </x:Arguments>
+    </NavigationPage>
     <local:BookmarksPage Title="Saved" IconImageSource="bookmark_icon.png"/>
     <local:SettingsPage Title="Settings" IconImageSource="settings_icon.svg"/>
 </TabbedPage>
