--- a/RealEstates/Pages/Home.xaml
+++ b/RealEstates/Pages/Home.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RealEstates.Pages.Home"
-             >
+             NavigationPage.HasNavigationBar="False">
     <ScrollView>
         <Grid Margin="20" RowSpacing="20">
             <Grid.RowDefinitions>
@@ -34,10 +34,12 @@
                 <Label Text="Categories"
                FontSize="Large"/>
                 <CollectionView x:Name="CvCategories"
-                        HeightRequest="50">
+                        HeightRequest="50"
+                        SelectionMode="Single"
+                        SelectionChanged="CvCategories_SelectionChanged">
                     <CollectionView.ItemsLayout>
                         <LinearItemsLayout ItemSpacing="20" Orientation="Horizontal">
-                            
+
                         </LinearItemsLayout>
                     </CollectionView.ItemsLayout>
 
@@ -53,7 +55,7 @@
                                     <Label VerticalOptions="Center"
                                            FontSize="Medium"
                                            Text="{Binding Name}"/>
-                                    
+
                                 </HorizontalStackLayout>
                             </Frame>
                         </DataTemplate>
@@ -66,7 +68,9 @@
                 <Label Text="Top Picks"
                FontSize="Large"/>
                 <CollectionView x:Name="CvTopPicks"
-                        HeightRequest="350">
+                        HeightRequest="350"
+                        SelectionMode="Single"
+                                SelectionChanged="CvTopPicks_SelectionChanged">
                     <CollectionView.ItemsLayout>
                         <LinearItemsLayout ItemSpacing="20" Orientation="Horizontal"/>
                     </CollectionView.ItemsLayout>
@@ -87,7 +91,7 @@
                                            WidthRequest="250"
                                            Padding="0"
                                            IsClippedToBounds="True">
-                                        <Image Source="{Binding FullImageUrl}"
+                                        <Image Source="{Binding FullImageUrls}"
                                                Aspect="Fill"/>
                                     </Frame>
                                     <Label Grid.Row="1"
@@ -103,7 +107,7 @@
                                              TextColor="AliceBlue"
                                              Text="{Binding Price}"/>
                                 </Grid>
-                                
+
                             </Frame>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
@@ -112,5 +116,4 @@
 
         </Grid>
     </ScrollView>
-    
 </ContentPage>
